# mini-baseball-simulation

./: .gitignore  bb_sim.py  main.py  pyproject.toml  readme.md
