[tool.poetry]
name = "score-from-avg-hit"
version = "0.0.1"
description = ""
authors = ["Sanghyuk Lee <shylee2021@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
